--- a/.github/workflows/sonar-cloud.yml
+++ b/.github/workflows/sonar-cloud.yml
@@ -22,11 +22,26 @@ jobs:
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
+    env:
+      working-directory : ./
     steps:
       - uses: actions/checkout@v2
+      
+      - name: Setup ReSharper Command Line Tools
+        run: dotnet tool install --global JetBrains.ReSharper.GlobalTools --version 2021.1.2
+      
+      - name: Clean up codebase via ReSharper Command Line Tools
+        run: jb inspectcode ./Zilon.Core/Zilon.Core.sln --swea -s=INFO -o=ReSharperReport.xml
+        working-directory: ${{env.working-directory}}
+
+      - name: Setup ReSharper to Sonar Converter
+        run: dotnet tool install --global dotnet-reqube
+        
+      - name: Convert ReSharper report to Sonar Report
+        run: dotnet-reqube -i ReSharperReport.xml -o SonarQubeReport.json -d ./Zilon.Core
 
       - name: sonarscan-dotnet
-        uses: highbyte/sonarscan-dotnet@v2.1.1-beta
+        uses: highbyte/sonarscan-dotnet@v2.1.2
         with:
           # The key of the SonarQube project
           sonarProjectKey: kreghek_Zilon_Roguelike
@@ -36,3 +51,4 @@ jobs:
           sonarOrganization: kreghek
           dotnetBuildArguments: ./Zilon.Core/Zilon.Core.sln
           dotnetDisableTests: true
+          sonarBeginArguments: /d:sonar.externalIssuesReportPaths=SonarQubeReport.json
