--- a/.github/workflows/sonar-cloud.yml
+++ b/.github/workflows/sonar-cloud.yml
@@ -31,7 +31,7 @@ jobs:
         run: dotnet tool install --global JetBrains.ReSharper.GlobalTools --version 2021.1.2
       
       - name: Inspect codebase via ReSharper Command Line Tools
-        run: jb inspectcode --swea -s=INFO -o=$GITHUB_WORKSPACE/AnalysisResults/ReSharperReport.xml -a $GITHUB_WORKSPACE/Zilon.Core $GITHUB_WORKSPACE/Zilon.Core/Zilon.Core.sln
+        run: jb inspectcode $GITHUB_WORKSPACE/Zilon.Core/Zilon.Core.sln --swea -s=INFO -o=$GITHUB_WORKSPACE/AnalysisResults/ReSharperReport.xml -a=$GITHUB_WORKSPACE/Zilon.Core
 
       - name: Setup ReSharper to Sonar Converter
         run: dotnet tool install --global dotnet-reqube
