--- a/.github/workflows/sonar-cloud.yml
+++ b/.github/workflows/sonar-cloud.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Setup ReSharper to Sonar Converter
         run: dotnet tool install --global dotnet-reqube
         
-      - name: Convert ReSharper report to Sonar Report
-        run: dotnet-reqube -i $GITHUB_WORKSPACE/AnalysisResults/ReSharperReport.xml -o $GITHUB_WORKSPACE/AnalysisResults/SonarQubeReport.json -d $GITHUB_WORKSPACE/Zilon.Core
+      - name: Convert report from ReSharper to SonarQube format
+        run: dotnet-reqube -i $GITHUB_WORKSPACE/AnalysisResults/ReSharperReport.xml -o $GITHUB_WORKSPACE/AnalysisResults/SonarQubeReport.json
 
       - name: sonarscan-dotnet
         uses: highbyte/sonarscan-dotnet@v2.1.2
