--- a/.github/workflows/coverage-report-generator.yml
+++ b/.github/workflows/coverage-report-generator.yml
@@ -31,10 +31,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '5.0.100'
+
+    - name: Setup .NET 6
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 6.0.x
+
     - name: Run ${{ matrix.test_suite }} in Release and collect coverage
       env:
         ZILON_LIV_SCHEME_CATALOG: /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Client/Assets/Resources/Schemes
@@ -43,10 +45,12 @@ jobs:
       run: |
         cd ./Zilon.Core
         dotnet test ${{ matrix.test_suite }}.sln --configuration Release /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}} /p:CoverletOutputFormat=\"cobertura,json\" /p:MergeWith="${{env.TEST_RESULT_PATH}}coverage.json" /p:SkipAutoProps=true /p:ExcludeByAttribute=\"Obsolete,GeneratedCode,CompilerGenerated\" /p:ExcludeByFile="**/Zilon.Core.Tests.Common/*.cs" /maxcpucount:1
+
     - name: Generat report ${{ matrix.test_suite }} via ReportGenerator in ${{ matrix.report_format }} format
       run: |
         dotnet tool install -g dotnet-reportgenerator-globaltool
         reportgenerator "-reports:${{env.TEST_RESULT_PATH}}coverage.cobertura.xml" "-targetdir:${{ env.REPORT_RESULT_PATH }}" -reporttypes:${{ matrix.report_format }}
+
     - uses: actions/upload-artifact@v2
       with:
         name: Report${{ matrix.test_suite }}
