--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -26,18 +26,20 @@ jobs:
           - bench_project: Zilon.Core.Benchmarks.MassGameplay
             bench_filter: MassGamePlayBench
     steps:
-      - uses: actions/checkout@v2
-      - name: Setup .NET Core
+      - uses: actions/checkout@v3
+
+      - name: Setup .NET 6
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '5.0.201'
+          dotnet-version: 6.0.x
+
       - name: Run DotNetBenchmark ${{ matrix.bench_project }}
         env:
           ZILON_LIV_SCHEME_CATALOG: /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Client/Assets/Resources/Schemes
           DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
           DOTNET_CLI_TELEMETRY_OUTPUT: 1
         run: dotnet run --project Zilon.Core/${{ matrix.bench_project }}/${{ matrix.bench_project }}.csproj --configuration Release --filter *${{ matrix.bench_filter }}*
-      - uses: actions/upload-artifact@v1
+      - uses: actions/upload-artifact@v3
         with:
           name: benchs
           path: BenchmarkDotNet.Artifacts/results
